--- a/app/src/main/res/layout/fragment_waypoint.xml
+++ b/app/src/main/res/layout/fragment_waypoint.xml
@@ -16,20 +16,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="0dp"
-    tools:context=".WaypointActivity">
+    tools:context=".WaypointFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/wa_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -49,7 +41,7 @@
                     android:layout_margin="8dp"
                     android:layout_marginBottom="8dp"
                     android:labelFor="@+id/waypointLocation"
-                    android:text="Position"
+                    android:text="@string/label_position"
                     android:textAlignment="center"
                     android:textColor="@color/colorBlue"
                     android:textSize="20sp" />
@@ -76,8 +68,8 @@
                     android:layout_marginEnd="30dp"
                     android:layout_marginBottom="50dp"
                     android:textAlignment="center"
-                    android:textSize="15dp"
-                    tools:text="121 m a.s.l. • 65% accuracy (GPS)" />
+                    android:textSize="15sp"
+                    tools:text="121 m a.s.l. • 65 m accuracy (GPS)" />
 
                 <EditText
                     android:id="@+id/waypointComment"
@@ -87,7 +79,7 @@
                     android:layout_marginEnd="30dp"
                     android:autofillHints=""
                     android:ems="10"
-                    android:hint="Waypoint description"
+                    android:hint="@string/label_waypoint_description"
                     android:inputType="textMultiLine|textCapSentences"
                     android:textAlignment="viewStart"
                     tools:targetApi="o" />
@@ -99,9 +91,8 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="30dp"
                     android:layout_marginBottom="30dp"
-                    android:contentDescription="Add photo"
+                    android:contentDescription="@string/label_add_photo"
                     android:minHeight="@dimen/thumbnail_size"
-                    android:onClick="addImage"
                     app:srcCompat="@android:drawable/ic_menu_camera" />
             </LinearLayout>
 
@@ -115,8 +106,7 @@
             android:layout_marginBottom="8dp"
             android:enabled="false"
             android:minHeight="60dp"
-            android:onClick="saveWaypoint"
-            android:text="Save" />
+            android:text="@string/button_save" />
 
     </LinearLayout>
 
