--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -23,6 +23,12 @@
         android:title="@string/export"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/menu_clear"
+        android:icon="@drawable/ic_delete_forever_white_24dp"
+        android:tint="@android:color/background_light"
+        android:title="@string/clear"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/menu_about"
         android:icon="@drawable/ic_info_white_24dp"
         android:tint="@android:color/background_light"
