Update French translations (Thieume)

--- a/app/src/main/res/values-fr/arrays.xml
+++ b/app/src/main/res/values-fr/arrays.xml
@@ -43,4 +43,13 @@
         <item>autre</item>
     </string-array>
 
+    <string-array name="imageSizeEntries">
+        <item>Taille native</item>
+        <item>800 px</item>
+        <item>1080 px</item>
+        <item>1280 px</item>
+        <item>1920 px</item>
+        <item>autre</item>
+    </string-array>
+
     </resources>
